[package]
name = "reth-narwhal-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-beacon-consensus.workspace = true
reth-primitives.workspace = true
reth-execution-errors.workspace = true
reth-execution-types.workspace = true
reth-network-p2p.workspace = true
reth-provider.workspace = true
reth-stages-api.workspace = true
reth-revm.workspace = true
reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-engine-primitives.workspace = true
reth-consensus.workspace = true
reth-network-peers.workspace = true
reth-tokio-util.workspace = true
reth-trie.workspace = true

# ethereum
alloy.workspace = true
alloy-signer.workspace = true
alloy-rpc-client.workspace = true
alloy-eips.workspace = true
alloy-signer-local.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
revm-primitives.workspace = true

# optimism
reth-optimism-consensus = { workspace = true, optional = true }

# async
futures-util.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream.workspace = true
tracing.workspace = true